# MCC

./: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  about.html  analyze_site.py  api.py  auto_pipeline.sh  blog.html  case-studies.html  cc-routes.html  chatbot.jsx  config.yaml  contact.html  dashboard_api.py  dialpad_links.txt  docker-compose.yml  fix_all_seo_and_links.py  index.html  install_astro_seo.sh  international-top-up.html  knowledge-base.html  main.css  opencode.json  package-lock.json  package.json  partners.html  pyproject.toml  requirements.txt  resources.html  revert_icon.py  run.py  sms-service.html  solutions.html  start_server.sh  support.html  test_dashboard.sh  update_links_v2.py  virtual-phone-number.html  (+1 more)
.astro/: settings.json
backend/: revert_icon.py
dashboard/: README.md  index.html
docs/: ASTRO_INTEGRATION_STRATEGY.md  INTEGRATION_QUICK_REFERENCE.md
docs/archive/: PHASE1_FEATURES.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_SUMMARY.md
frontend/: build-styles.cjs  package-lock.json  package.json
frontend-temp/: package-lock.json  package.json
pipeline/: __init__.py  main.py  seo_analyzer.py
pipeline/connectors/: base_connector.py  search_console.py  serpapi.py
pipeline/prompts/: seo_prompts.py
pipeline/schemas/: input_schema.json  output_schema.json
pipeline/stages/: __init__.py  data_collection.py  deploy.py  (+3 more)
sys-prompt gen/: check_conn.py  dialpad.com-organic.Positions-us-20260223-2026-02-24T22_57_03Z.json  main.py  main_debug.py  output_new.json  test.py  test_post.py  test_simple.py
tests/: __init__.py
(+200 files in other folders)
